fix: rate bug item overflows navbar

--- a/client/src/components/styles/Navbar.module.scss
+++ b/client/src/components/styles/Navbar.module.scss
@@ -6,7 +6,7 @@
     top: 0;
     background-color: rgb(50, 52, 63);
     border-bottom: 4px solid red;
-    z-index: 2;
+    z-index: 4;
 }
 
 .Navbar_w {
@@ -14,7 +14,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 2;
+    z-index: 4;
 }
 
 .Navbar_left {
